# geometry-processing-registration

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: random_utils.h
src/: closest_rotation.cpp  hausdorff_lower_bound.cpp  icp_single_iteration.cpp  point_mesh_distance.cpp  point_to_plane_rigid_matching.cpp  point_to_point_rigid_matching.cpp  point_triangle_distance.cpp  random_points_on_mesh.cpp
tests/: CMakeLists.txt  test_closest_rotation.cpp  test_hausdorff_lower_bound.cpp  test_meshes.h  test_point_mesh_distance.cpp  test_point_triangle_distance.cpp  test_random_points_on_mesh.cpp  test_rigid_matching.cpp
